# Verisight

./: .gitignore  README.md  pyproject.toml
tests/: test_broker.py  test_constraints.py  test_duckduckgo_provider.py  test_provider_options.py  test_provider_params.py  test_rank.py  test_router.py  test_verify.py
verisight/: broker.py  cli.py  config.py  constraints.py  deep.py  output.py  provider_options.py  rank.py  registry.py  resilience.py  router.py  schema.py  sources.py  verify.py
verisight/providers/: __init__.py  base.py  brave.py  duckduckgo.py  exa.py  jina.py  tavily.py
verisight/workers/: __init__.py  base.py  contradiction.py  discovery.py  extraction.py  official.py
