[project]
name = "verisight"
version = "0.3.1"
description = "Verisight（洞真）: CLI-first web search and evidence verification for coding agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ddgs>=9.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "typer>=0.12.0",
]

[project.scripts]
verisight = "verisight.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verisight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
